Interests update for heroku deploy

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -105,11 +105,12 @@
 
       <ul>
 	<li>Ruby on Rails development</li>
-	<li>Data Visualization with python: seaborn, scipy, numpy, pandas</li>
+	<li>Data Visualization with python: seaborn, scipy, numpy, pandas, scikit-learn</li>
 	<li>Algorithmics using Ruby, Python and Java</li>
 	<li>Working knowledge of C</li>
 	<li>Continous Integration with Jenkins</li>
 	<li>Android framework</li>
+	<li>Statistics and Calculus</li>
 	**Non-Technical Interests**
 	<li>Proven leader, from military service and being head organizer for large scale conferences</li>
 	<li>Adept knowledge of quantum-physics</li>
