--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -40,7 +40,7 @@
       
       <p>Hi, I'm Nick. Welcome to my webpage!</p>
       <p>I am a ...</p>
-      <p>Software Engineer - TEDxCurator - AI Researcher - Computer Engineering student</p>
+      <p>Software Engineer - TEDxCurator - AI Researcher - Computer Engineering Student</p>
 
       <p>My passion is building new products that solve the worlds problems by making complicated technologies usable for non-scientists.
       I make software that is self parametrized and plug & play; so that non-computer savvy
@@ -114,9 +114,9 @@
 	**Non-Technical Interests**
 	<li>Proven leader, from military service and being head organizer for large scale conferences</li>
 	<li>Adept knowledge of quantum-physics</li>
-	<li>Bookworm, I read hilosophy books when I should be working on a million other things</li>
-	<li>Tripple citizenship: Canadian, Swiss Taiwanese</li>
-	<li>I need to live in a city where I can bike everywhere... Montreal :D</li>
+	<li>Bookworm, I read philosophy books all.the.time</li>
+	<li>Tripple citizenship: Canadian, Swiss, Taiwanese</li>
+	<li>I need to live in a city where I can bike everywhere</li>
 
       <h3>Education</h3>
     
@@ -130,7 +130,7 @@
   
   <div>
     <hr />
-    <span id="lastmodified"><i>Last modified: Tue Sep 29 17:18:40 EDT 2015</i></span>
+    <span id="lastmodified"><i>Last modified: Tue Oct 05 17:06:40 EDT 2015</i></span>
     <a href="http://validator.w3.org/check?uri=referer">
       <img class="w3c" src="http://www.w3.org/Icons/valid-xhtml10"
            alt="Valid XHTML 1.0 Transitional" /></a>
