--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -45,7 +45,7 @@
       <p>My passion is building new products that solve the worlds problems by making complicated technologies usable for non-scientists.
       I make software that is self parametrized and plug & play; so that non-computer savvy
       people can benefit from them as well. I love getting involved in complex problems and 
-      always looking for inovative solutions.</p>
+      always looking for innovative solutions.</p>
 
       <p>"Everything should be made as simple as possible, but not simpler" 
       "The first principle is that you must not fool yourself and you are the easiest person to fool."
@@ -76,7 +76,7 @@
 	<li><b>Artificial Intelligence Researcher</b> at <a href="https://www.concordia.ca/">Concordia University</a> in the <a href="https://www.encs.concordia.ca/research/centres/">Computational Intellingence Lab</a>. Developing heuristic algorithm that combine <a href="https://en.wikipedia.org/wiki/Tabu_search">Tabu Search</a>, <a href="https://en.wikipedia.org/wiki/Differential_evolution">Differential Evolution</a>, <a href="https://en.wikipedia.org/wiki/Simulated_annealing">Simulated Annealing</a>. We are calling this algorithms Map Explore Exploit. It will be self parametrized and plug & play.</li>
 	<li><b>Engineer Intern</b> at <a href="http://www.hydroquebec.com/en/">Hydro-Qubec</a>. Worked on automation of tasks on a circuit simulator developed by Siemens called PSS/E. Upon ending my time at Hydro-Quebec, my automation was so efficient, they stopped hiring for that position :o</li>
 	<li><b>Curator</b> at <a href="http://tedxmontreal.com/">TEDxMontreal</a> and <b>Licensee</b> at <a href="http://tedxconcordia.com/">TEDxConcordia</a>. Recruited speakers and coaches. Coached speakers. Managed overall event.</li>
-	<li><b>Instructor - Sargent</b> at <a href="http://www.vtg.admin.ch/internet/vtg/en/home.html">Swiss Armed Forces</a>. Served as an instructor for the <a href="http://www.redcross.ca/">Red-Cross</a>. Managed a group of 40 recuits. Followed nine week leadership training.</li>
+	<li><b>Instructor - Sargent</b> at <a href="http://www.vtg.admin.ch/internet/vtg/en/home.html">Swiss Armed Forces</a>. Served as an instructor for the <a href="http://www.redcross.ca/">Red-Cross</a>. Managed a group of 40 recruits. Followed nine week leadership training.</li>
       </ul>
       <h3>Social Media</h3>
 
@@ -130,7 +130,7 @@
   
   <div>
     <hr />
-    <span id="lastmodified"><i>Last modified: Tue Oct 05 17:06:40 EDT 2015</i></span>
+    <span id="lastmodified"><i>Last modified: Tue Oct 05 20:50:45 EDT 2015</i></span>
     <a href="http://validator.w3.org/check?uri=referer">
       <img class="w3c" src="http://www.w3.org/Icons/valid-xhtml10"
            alt="Valid XHTML 1.0 Transitional" /></a>
